--- a/index.html
+++ b/index.html
@@ -14,11 +14,8 @@
 	<header class="header">
 		<div class="container header-container">
 			<a class="logo">
-<<<<<<< HEAD
-				<img src="img/logo.svg" alt="Webovio Logo">
-=======
-				<img src="img/Logo.svg" alt="Webovio Logo">
->>>>>>> bbd771ae3569584c7e8c275fe16728c2c2b8982a
+ <!-- HEAD -->
+				<img src="./img/logo.svg" alt="Webovio Logo">
 			</a>
 			<button class="burger btn-reset" aria-label="Open menu">
 				<span class="burger-line"></span>
