--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
 	<header class="header">
 		<div class="container header-container">
 			<a class="logo">
- <!-- HEAD -->
-				<img src="./img/logo.svg" alt="Webovio Logo">
+				<img src="img/logo.svg" alt="Webovio Logo">
 			</a>
 			<button class="burger btn-reset" aria-label="Open menu">
 				<span class="burger-line"></span>
@@ -207,10 +206,10 @@
 					<p class="footer-text">Feel free to get in touch with us vai email</p>
 					<a href="mailto:info.webovio@gmail.com" class="footer-mail">info.webovio@gmail.com</a>
 					<ul class="social list-reset">
-						<li class="social-item"><a href="#" class="social-link social-link-facebook" target="_blank" aria-label="Link to Facebook"></a></li>
-						<li class="social-item"><a href="#" class="social-link social-link-twitter" target="_blank" aria-label="Link to Twitter"></a></li>
-						<li class="social-item"><a href="#" class="social-link social-link-google-plus" target="_blank" aria-label="Link to Google+"></a></li>
-						<li class="social-item"><a href="#" class="social-link social-linkedin" target="_blank" aria-label="Link to LinkeIn"></a></li>
+						<li class="social-item"><a href="#" class="social-link social-link-fb" target="_blank" aria-label="Link to Facebook"></a></li>
+						<li class="social-item"><a href="#" class="social-link social-link-tw" target="_blank" aria-label="Link to Twitter"></a></li>
+						<li class="social-item"><a href="#" class="social-link social-link-g" target="_blank" aria-label="Link to Google+"></a></li>
+						<li class="social-item"><a href="#" class="social-link social-link-in" target="_blank" aria-label="Link to LinkeIn"></a></li>
 					</ul>
 				</div>
 			</div>
@@ -223,6 +222,5 @@
 		</div>
 	</footer>
 </body>
-
 
 </html>
